test/invalid/syntactic/missing_body_or_semicolon.sysml
// INVALID: definition needs either a body or semicolon
// EXPECTED: Parse error
part def Vehicle
part def Engine;
